--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-    <script type="module" src="main.js"></script>
     <title>Monsters</title>
+    <script src='http://use.edgefonts.net/butcherman.js'></script>
+
   </head>
   <body>
     <canvas id="screen" width="1000" height="500"></canvas>
